Adds cordray photo to bio page.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -39,13 +39,30 @@
                 <section>
 
                     <div class="content_block content_block__flush-top">
-                        <h1>Director Richard Cordray</h1>
-                        <p class="h3">Richard Cordray serves as the first Director of the Consumer Financial Protection Bureau. He previously led the Bureau’s Enforcement Division.</p>
-                        <p><div class="demo-placeholder u-float-left">Bio photo</div>Prior to joining the Bureau, Mr. Cordray served on the front lines of consumer protection as Ohio’s Attorney General. Mr. Cordray recovered more than $2 billion for Ohio’s retirees, investors, and business owners and took major steps to help protect its consumers from fraudulent foreclosures and financial predators. In 2010, his office responded to a record number of consumer complaints, but Mr. Cordray went further and opened that process for the first time to small businesses and non-profit organizations to ensure protections for even more Ohioans. To recognize his work on behalf of consumers as Attorney General, the Better Business Bureau presented Mr. Cordray with an award for promoting an ethical marketplace.</p>
-                        <p>Mr. Cordray also served as Ohio Treasurer and Franklin County Treasurer, two elected positions in which he led state and county banking, investment, debt, and financing activities. As Ohio Treasurer, he resurrected a defunct economic development program that provides low-interest loan assistance to small businesses to create jobs, re-launched the original concept as GrowNOW, and pumped hundreds of millions of dollars into access for credit to small businesses. Mr. Cordray simultaneously created a Bankers Advisory Council to share ideas about the program with community bankers across Ohio.</p>
-                        <p>Earlier in his career, Mr. Cordray was an adjunct professor at the Ohio State University College of Law, served as a State Representative for the 33rd Ohio House District, was the first Solicitor General in Ohio’s history, and was a sole practitioner and Of Counsel to Kirkland & Ellis. Mr. Cordray has argued seven cases before the United States Supreme Court, including by special appointment of both the Clinton and Bush Justice Departments. He is a graduate of Michigan State University, Oxford University, and the University of Chicago Law School. Mr. Cordray was Editor-in-Chief of the University of Chicago Law Review and later clerked for U.S. Supreme Court Justices Byron White and Anthony Kennedy.</p>
-                        <p>Mr. Cordray lives in Grove City, Ohio with his wife Peggy – a Professor at Capital University Law School in Columbus – and twin children Danny and Holly.</p>
-                        <div class="demo-placeholder">Share</div>
+                        <h1>
+                            Director Richard Cordray
+                        </h1>
+                        <p class="h3">
+                            Richard Cordray serves as the first Director of the Consumer Financial Protection Bureau. He previously led the Bureau’s Enforcement Division.
+                        </p>
+                        <p>
+                            <img class="float-media"
+                                 src="/static/img/photo_richard_cordray_lo_res.jpg"
+                                 alt="">
+                            Prior to joining the Bureau, Mr. Cordray served on the front lines of consumer protection as Ohio’s Attorney General. Mr. Cordray recovered more than $2 billion for Ohio’s retirees, investors, and business owners and took major steps to help protect its consumers from fraudulent foreclosures and financial predators. In 2010, his office responded to a record number of consumer complaints, but Mr. Cordray went further and opened that process for the first time to small businesses and non-profit organizations to ensure protections for even more Ohioans. To recognize his work on behalf of consumers as Attorney General, the Better Business Bureau presented Mr. Cordray with an award for promoting an ethical marketplace.
+                        </p>
+                        <p>
+                            Mr. Cordray also served as Ohio Treasurer and Franklin County Treasurer, two elected positions in which he led state and county banking, investment, debt, and financing activities. As Ohio Treasurer, he resurrected a defunct economic development program that provides low-interest loan assistance to small businesses to create jobs, re-launched the original concept as GrowNOW, and pumped hundreds of millions of dollars into access for credit to small businesses. Mr. Cordray simultaneously created a Bankers Advisory Council to share ideas about the program with community bankers across Ohio.
+                        </p>
+                        <p>
+                            Earlier in his career, Mr. Cordray was an adjunct professor at the Ohio State University College of Law, served as a State Representative for the 33rd Ohio House District, was the first Solicitor General in Ohio’s history, and was a sole practitioner and Of Counsel to Kirkland & Ellis. Mr. Cordray has argued seven cases before the United States Supreme Court, including by special appointment of both the Clinton and Bush Justice Departments. He is a graduate of Michigan State University, Oxford University, and the University of Chicago Law School. Mr. Cordray was Editor-in-Chief of the University of Chicago Law Review and later clerked for U.S. Supreme Court Justices Byron White and Anthony Kennedy.
+                        </p>
+                        <p>
+                            Mr. Cordray lives in Grove City, Ohio with his wife Peggy – a Professor at Capital University Law School in Columbus – and twin children Danny and Holly.
+                        </p>
+                        <div class="demo-placeholder">
+                            Share
+                        </div>
                     </div>
                     
                     <section class="content_block u-hide-on-mobile">
