Updates director photo.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -46,9 +46,12 @@
                             Richard Cordray serves as the first Director of the Consumer Financial Protection Bureau. He previously led the Bureau’s Enforcement Division.
                         </p>
                         <p>
-                            <img class="float-media"
-                                 src="/static/img/photo_richard_cordray_lo_res.jpg"
-                                 alt="">
+                            <figure class="float-media">
+                                <img class="rwd-crop"
+                                     src="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_lo-res.jpg"
+                                     width="155"
+                                     alt="">
+                            </figure>
                             Prior to joining the Bureau, Mr. Cordray served on the front lines of consumer protection as Ohio’s Attorney General. Mr. Cordray recovered more than $2 billion for Ohio’s retirees, investors, and business owners and took major steps to help protect its consumers from fraudulent foreclosures and financial predators. In 2010, his office responded to a record number of consumer complaints, but Mr. Cordray went further and opened that process for the first time to small businesses and non-profit organizations to ensure protections for even more Ohioans. To recognize his work on behalf of consumers as Attorney General, the Better Business Bureau presented Mr. Cordray with an award for promoting an ethical marketplace.
                         </p>
                         <p>
