--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                                         <a class="list_link" href="docs/blog-docs/">Blog docs</a>
                                     </li>
                                     <li class="list_item list_item__spaced">
+                                        <a class="list_link" href="docs/cf-enhancements/">CF enhancements</a>
+                                    </li>
+                                    <li>
                                         <a class="list_link" href="docs/layout/">Layout</a>
                                     </li>
                                     <li>
