Fixes bio photo markup.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -46,8 +46,8 @@
                             Richard Cordray serves as the first Director of the Consumer Financial Protection Bureau. He previously led the Bureau’s Enforcement Division.
                         </p>
                         <p>
-                            <figure class="float-media">
-                                <img class="rwd-crop"
+                            <figure class="float-media rwd-crop">
+                                <img class="rwd-crop_item"
                                      src="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_lo-res.jpg"
                                      width="155"
                                      alt="">
