--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     
-                    <section class="content_block u-hide-on-mobile">
+                    <section class="content_block content_block__border-top content_block__border-bottom u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <span class="demo-placeholder">IMG</span>
@@ -130,7 +130,7 @@
                             </div>
                         </section>
 
-                        <div class="content_block">
+                        <div class="content_block content_block__padded-top content_block__border-top">
                             <div class="content-l">
                                 <section class="content-l_col content-l_col-1-2">
                                     <h1 class="h2">
@@ -163,7 +163,7 @@
                             </div>
                         </div>
 
-                        <section class="content_block">
+                        <section class="content_block content_block__padded-top content_block__border-top">
                             <h1 class="h2">
                                 CFPB leadership
                             </h1>
