--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -39,10 +39,10 @@
                 <section>
 
                     <div class="content_block content_block__flush-top">
-                        <h1>
+                        <h1 class="content_title__extra-large">
                             Director Richard Cordray
                         </h1>
-                        <p class="h3">
+                        <p class="content_desc__large">
                             Richard Cordray serves as the first Director of the Consumer Financial Protection Bureau. He previously led the Bureau’s Enforcement Division.
                         </p>
                         <p>
@@ -95,7 +95,9 @@
                     <aside>
 
                         <section class="content_block">
-                            <h1 class="h2">More information about Richard Cordray</h1>
+                            <h1 class="content_title__large">
+                                More information about Richard Cordray
+                            </h1>
                             <div class="content-l">
                                 <div class="content-l_col content-l_col-1-3">
                                     <h2 class="h5">
@@ -133,7 +135,7 @@
                         <div class="content_block content_block__padded-top content_block__border-top">
                             <div class="content-l">
                                 <section class="content-l_col content-l_col-1-2">
-                                    <h1 class="h2">
+                                    <h1 class="content_title__large">
                                         Cordray’s Corner
                                     </h1>
                                     <figure class="figure__bordered">
@@ -147,7 +149,7 @@
                                     </a>
                                 </section>
                                 <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                    <h1 class="h2">
+                                    <h1 class="content_title__large">
                                         CFPB history
                                     </h1>
                                     <figure class="figure__bordered">
@@ -164,7 +166,7 @@
                         </div>
 
                         <section class="content_block content_block__padded-top content_block__border-top">
-                            <h1 class="h2">
+                            <h1 class="content_title__large">
                                 CFPB leadership
                             </h1>
                             <div class="content-l">
