Updates image placement.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -71,16 +71,22 @@
                     <section class="content_block content_block__border-top content_block__border-bottom u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
-                                <span class="demo-placeholder">IMG</span>
-                                <h1 class="h4">Downloads</h1>
-                                <ul class="list list__horizontal list__links">
-                                    <li class="li list_item">
-                                        <a href="#" class="list_link jump-link jump-link__download">High-res photo</a>
-                                    </li>
-                                    <li class="list_item">
-                                        <a href="#" class="list_link jump-link jump-link__download">Biography</a>
-                                    </li>
-                                </ul>
+                                <div class="media">
+                                    <div class="media_image-container">
+                                        <span class="demo-placeholder media_image">IMG</span>
+                                    </div>
+                                    <div class="media_body">
+                                        <h1 class="h4">Downloads</h1>
+                                        <ul class="u-mb0 list list__horizontal list__links">
+                                            <li class="li list_item">
+                                                <a href="#" class="list_link jump-link jump-link__download">High-res photo</a>
+                                            </li>
+                                            <li class="list_item">
+                                                <a href="#" class="list_link jump-link jump-link__download">Biography</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                                 <h1 class="h4">Request speaking info</h1>
@@ -139,7 +145,7 @@
                                         Cordray’s Corner
                                     </h1>
                                     <figure class="figure__bordered">
-                                        <img src="http://placekitten.com/380/214" alt="">
+                                        <img src="http://placekitten.com/420/236" alt="">
                                     </figure>
                                     <p class="short-desc short-desc__large">
                                         View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
@@ -153,7 +159,7 @@
                                         CFPB history
                                     </h1>
                                     <figure class="figure__bordered">
-                                        <img src="http://placekitten.com/380/214" alt="">
+                                        <img src="http://placekitten.com/420/236" alt="">
                                     </figure>
                                     <p class="short-desc short-desc__large">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
