--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -78,7 +78,7 @@
                                     <div class="media_body">
                                         <h1 class="h4">Downloads</h1>
                                         <ul class="u-mb0 list list__horizontal list__links">
-                                            <li class="li list_item">
+                                            <li class="list_item">
                                                 <a href="#" class="list_link jump-link jump-link__download">High-res photo</a>
                                             </li>
                                             <li class="list_item">
@@ -90,10 +90,14 @@
                             </div>
                             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                                 <h1 class="h4">Request speaking info</h1>
-                                <span class="cf-icon cf-icon-email"></span>
-                                <a href="mailto:externalaffairs@cfpb.gov">
-                                    externalaffairs@cfpb.gov
-                                </a>
+                                <ul class="u-mb0 list list__unstyled">
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-email"></span>
+                                        <a class="list_link" href="mailto:externalaffairs@cfpb.gov">
+                                            externalaffairs@cfpb.gov
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </section>
