--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -35,7 +35,7 @@
                 {% include "nav.html" %}
             </aside>
 
-            <div class="content_main content__flush-bottom content__flush-top-on-small">
+            <div class="content_main content__flush-top-on-small">
                 <section>
 
                     <div class="content_block content_block__flush-top">
@@ -175,7 +175,7 @@
                             </div>
                         </div>
 
-                        <section class="content_block content_block__padded-top content_block__border-top">
+                        <section class="u-mb0 content_block content_block__padded-top content_block__border-top">
                             <h1 class="content_title__large">
                                 CFPB leadership
                             </h1>
