--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -175,7 +175,7 @@
                             </div>
                         </div>
 
-                        <section class="u-mb0 content_block content_block__padded-top content_block__border-top">
+                        <section class="content_block content_block__padded-top content_block__border-top">
                             <h1 class="content_title__large">
                                 CFPB leadership
                             </h1>
