Better markup for downloads section.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -75,27 +75,17 @@
                                     </div>
                                     <div class="media_body">
                                         <h1 class="h4">Downloads</h1>
-                                        <ul class="u-mb0 list list__horizontal list__links">
-                                            <li class="list_item">
-                                                <a href="#" class="list_link jump-link jump-link__download">High-res photo</a>
-                                            </li>
-                                            <li class="list_item">
-                                                <a href="#" class="list_link jump-link jump-link__download">Biography</a>
-                                            </li>
-                                        </ul>
+                                            <a href="#" class="jump-link jump-link__download">High-res photo</a>
+                                            <a href="#" class="jump-link jump-link__download">Biography</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                                 <h1 class="h4">Request speaking info</h1>
-                                <ul class="u-mb0 list list__unstyled">
-                                    <li class="list_item">
-                                        <span class="cf-icon cf-icon-email"></span>
-                                        <a class="list_link" href="mailto:externalaffairs@cfpb.gov">
-                                            externalaffairs@cfpb.gov
-                                        </a>
-                                    </li>
-                                </ul>
+                                <span class="cf-icon cf-icon-email"></span>
+                                <a href="mailto:externalaffairs@cfpb.gov">
+                                    externalaffairs@cfpb.gov
+                                </a>
                             </div>
                         </div>
                     </section>
