--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -163,7 +163,7 @@
                             </div>
                         </div>
 
-                        <section class="content_block content_block__padded-top content_block__border-top">
+                        <section class="content_block content_block__padded-top content_block__border-top content_block__flush-bottom">
                             <h1 class="content_title__large">
                                 CFPB leadership
                             </h1>
