--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -66,7 +66,7 @@
                         {{ macros.share(self.title(), true) }}
                     </div>
                     
-                    <section class="content_block content_block__border-top content_block__border-bottom u-hide-on-mobile">
+                    <section class="content_block content_block__padded-top content_block__padded-bottom content_block__border-top u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
@@ -92,7 +92,7 @@
                     
                     <aside>
 
-                        <section class="content_block">
+                        <section class="content_block content_block__padded-top content_block__border-top">
                             <h1 class="content_title__large">
                                 More information about Richard Cordray
                             </h1>
