--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -169,12 +169,12 @@
                             </h1>
                             <div class="content-l">
                                 <div class="content-l_col content-l_col-1-2">
-                                    <p class="short-desc">
+                                    <p class="u-mb0 short-desc">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB. In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director  of the CFPB.
                                     </p>
                                 </div>
                                 <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                    <ul class="list list__unstyled list__links">
+                                    <ul class="u-mb0 list list__unstyled list__links">
                                         <li class="list_item">
                                             <a href="#" class="list_link jump-link">
                                                 Learn more about deputy director Steven Antonkes
