--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -103,7 +103,7 @@
                                         Newsroom
                                     </h2>
                                     <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="#" class="jump-link">
+                                    <a href="/newsroom/?filter_author=Richard+Cordray" class="jump-link">
                                         Read news about the director
                                     </a>
                                 </div>
@@ -113,7 +113,7 @@
                                         Blogs
                                     </h2>
                                     <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="#" class="jump-link">
+                                    <a href="/blog/?filter_author=Richard+Cordray" class="jump-link">
                                         Blogs with the director
                                     </a>
                                 </div>
@@ -123,7 +123,7 @@
                                         Calendar
                                     </h2>
                                     <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="#" class="jump-link">
+                                    <a href="{{ path + 'leadership-calendar/' }}" class="jump-link">
                                         View Director Cordray's calendar
                                     </a>
                                 </div>
@@ -142,7 +142,7 @@
                                     <p class="short-desc short-desc__large">
                                         View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
                                     </p>
-                                    <a href="#" class="jump-link jump-link__external-link">
+                                    <a href="https://www.youtube.com/user/cfpbvideo/search?query=Cordray%27s+Corner" class="jump-link jump-link__external-link">
                                         View Cordray’s Corner videos on YouTube
                                     </a>
                                 </section>
@@ -156,7 +156,7 @@
                                     <p class="short-desc short-desc__large">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
                                     </p>
-                                    <a href="#" class="jump-link jump-link__external-link">
+                                    <a href="{{ path + 'history/' }}" class="jump-link jump-link__external-link">
                                         Learn more about our history
                                     </a>
                                 </section>
@@ -176,18 +176,18 @@
                                 <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                                     <ul class="u-mb0 list list__unstyled list__links">
                                         <li class="list_item">
-                                            <a href="#" class="list_link jump-link">
+                                            <a href="{{ path + 'about-steve-antonakes/' }}" class="list_link jump-link">
                                                 Learn more about deputy director Steven Antonkes
                                             </a>
                                         </li>
                                         <li class="list_item">
-                                            <a href="#" class="list_link jump-link">
-                                                Learn more about deputy director Steven Antonkes
+                                            <a href="{{ path + 'leadership-calendar/' }}" class="list_link jump-link">
+                                                View our leadership calendar
                                             </a>
                                         </li>
                                         <li class="list_item">
-                                            <a href="#" class="list_link jump-link">
-                                                Learn more about deputy director Steven Antonkes
+                                            <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
+                                                Bureau organizational structure
                                             </a>
                                         </li>
                                     </ul>
