Adds small cordray image.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -71,11 +71,11 @@
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
                                     <div class="media_image-container">
-                                        <span class="demo-placeholder media_image">IMG</span>
+                                        <img src="cordray_round_90.jpg" alt="" width="60">
                                     </div>
                                     <div class="media_body">
                                         <h1 class="h4">Downloads</h1>
-                                            <a href="#" class="jump-link jump-link__download">High-res photo</a>
+                                            <a href="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_high-res.jpg" class="jump-link jump-link__download">High-res photo</a>
                                             <a href="#" class="jump-link jump-link__download">Biography</a>
                                     </div>
                                 </div>
