Adds another image.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -151,7 +151,7 @@
                                         CFPB history
                                     </h1>
                                     <figure class="figure__bordered">
-                                        <img src="http://placekitten.com/420/236" alt="">
+                                        <img src="../obama_cordray.jpg" alt="">
                                     </figure>
                                     <p class="short-desc short-desc__large">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
