Adds cordrays corner image.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -137,7 +137,7 @@
                                         Cordray’s Corner
                                     </h1>
                                     <figure class="figure__bordered">
-                                        <img src="http://placekitten.com/420/236" alt="">
+                                        <img src="cordrays_corner.jpg" alt="">
                                     </figure>
                                     <p class="short-desc short-desc__large">
                                         View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
