--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -74,11 +74,11 @@
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
                                     <div class="media_image-container">
-                                        <img src="cordray_round_90.jpg" alt="" width="60">
+                                        <img src="antonakes_round_90.jpg" alt="" width="60">
                                     </div>
                                     <div class="media_body">
                                         <h1 class="h4">Downloads</h1>
-                                            <a href="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_high-res.jpg" class="jump-link jump-link__download">High-res photo</a>
+                                            <a href="/newsroom/press-resources/201405_cfpb_photo_steve-antonakes_high-res.jpg" class="jump-link jump-link__download">High-res photo</a>
                                             <a href="#" class="jump-link jump-link__download">Biography</a>
                                     </div>
                                 </div>
@@ -97,7 +97,7 @@
 
                         <section class="content_block content_block__padded-top content_block__border-top">
                             <h1 class="content_title__large">
-                                More information about Richard Cordray
+                                More information about Steve Antonakes
                             </h1>
                             <div class="content-l">
                                 <div class="content-l_col content-l_col-1-3">
@@ -106,8 +106,8 @@
                                         Newsroom
                                     </h2>
                                     <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="/newsroom/?filter_author=Richard+Cordray" class="jump-link">
-                                        Read news about the director
+                                    <a href="/newsroom/?filter_author=Steve+Antonakes" class="jump-link">
+                                        Read news about the deputy director
                                     </a>
                                 </div>
                                 <div class="content-l_col content-l_col-1-3">
@@ -116,8 +116,8 @@
                                         Blogs
                                     </h2>
                                     <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="/blog/?filter_author=Richard+Cordray" class="jump-link">
-                                        Blogs with the director
+                                    <a href="/blog/?filter_author=Steve+Antonakes" class="jump-link">
+                                        Blogs with the deputy director
                                     </a>
                                 </div>
                                 <div class="content-l_col content-l_col-1-3">
@@ -127,44 +127,11 @@
                                     </h2>
                                     <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
                                     <a href="{{ path + 'leadership-calendar/' }}" class="jump-link">
-                                        View Director Cordray's calendar
+                                        View Deputy Director Antonakes' calendar
                                     </a>
                                 </div>
                             </div>
                         </section>
-
-                        <div class="content_block content_block__padded-top content_block__border-top">
-                            <div class="content-l">
-                                <section class="content-l_col content-l_col-1-2">
-                                    <h1 class="content_title__large">
-                                        Cordray’s Corner
-                                    </h1>
-                                    <figure class="figure__bordered">
-                                        <img src="cordrays_corner.jpg" alt="">
-                                    </figure>
-                                    <p class="short-desc short-desc__large">
-                                        View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
-                                    </p>
-                                    <a href="https://www.youtube.com/user/cfpbvideo/search?query=Cordray%27s+Corner" class="jump-link jump-link__external-link">
-                                        View Cordray’s Corner videos on YouTube
-                                    </a>
-                                </section>
-                                <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                    <h1 class="content_title__large">
-                                        CFPB history
-                                    </h1>
-                                    <figure class="figure__bordered">
-                                        <img src="../obama_cordray.jpg" alt="">
-                                    </figure>
-                                    <p class="short-desc short-desc__large">
-                                        In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
-                                    </p>
-                                    <a href="{{ path + 'history/' }}" class="jump-link jump-link__external-link">
-                                        Learn more about our history
-                                    </a>
-                                </section>
-                            </div>
-                        </div>
 
                         <section class="content_block content_block__padded-top content_block__border-top content_block__flush-bottom">
                             <h1 class="content_title__large">
