Tweaks to bios from DR.

--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -22,7 +22,7 @@
 
     {# Macros #}
 
-    {% import "post-macros.html" as post_macros with context %}
+    {% import "post-macros.html" as post_macros %}
 
     <main class="content content__1-3" id="main" role="main">
 
@@ -56,9 +56,6 @@
                         </p>
                         <p>
                             Mr. Antonakes began his professional career as an entry level bank examiner with the Commonwealth of Massachusetts Division of Banks in 1990. He later served in numerous managerial capacities before being appointed by successive Governors to serve as the Commissioner of Banks from December 2003 until November 2010, becoming only the second career bank examiner to ever serve in that capacity.
-                        </p>
-                        <p>
-                            Earlier in his career, Mr. Cordray was an adjunct professor at the Ohio State University College of Law, served as a State Representative for the 33rd Ohio House District, was the first Solicitor General in Ohio’s history, and was a sole practitioner and Of Counsel to Kirkland & Ellis. Mr. Cordray has argued seven cases before the United States Supreme Court, including by special appointment of both the Clinton and Bush Justice Departments. He is a graduate of Michigan State University, Oxford University, and the University of Chicago Law School. Mr. Cordray was Editor-in-Chief of the University of Chicago Law Review and later clerked for U.S. Supreme Court Justices Byron White and Anthony Kennedy.
                         </p>
                         <p>
                             Mr. Antonakes also previously served as the first state voting member of the Federal Financial Institutions Examination Council (FFIEC), as the Vice Chairman of the Conference of State Bank Supervisors (CSBS), and as a founding member of the governing board of the Nationwide Mortgage Licensing System (NMLS). In March 2007, Mr. Antonakes received NeighborWorks America’s Government Service Award for his work in combatting foreclosures.
@@ -133,36 +130,24 @@
                             </div>
                         </section>
 
-                        <section class="content_block content_block__padded-top content_block__border-top content_block__flush-bottom">
-                            <h1 class="content_title__large">
-                                CFPB leadership
+                        <section class="content_block">
+                            <h1 class="header-slug">
+                                <span class="header-slug_inner">
+                                    Related links
+                                </span>
                             </h1>
-                            <div class="content-l">
-                                <div class="content-l_col content-l_col-1-2">
-                                    <p class="u-mb0 short-desc">
-                                        In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB. In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director  of the CFPB.
-                                    </p>
-                                </div>
-                                <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                    <ul class="u-mb0 list list__unstyled list__links">
-                                        <li class="list_item">
-                                            <a href="{{ path + 'about-steve-antonakes/' }}" class="list_link jump-link">
-                                                Learn more about deputy director Steven Antonkes
-                                            </a>
-                                        </li>
-                                        <li class="list_item">
-                                            <a href="{{ path + 'leadership-calendar/' }}" class="list_link jump-link">
-                                                View our leadership calendar
-                                            </a>
-                                        </li>
-                                        <li class="list_item">
-                                            <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
-                                                Bureau organizational structure
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <ul class="u-mb0 list list__unstyled list__links">
+                                <li class="list_item">
+                                    <a href="{{ path + 'about-rich-cordray/' }}" class="list_link jump-link">
+                                        Learn about Director Richard Cordray
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
+                                        Bureau organizational structure
+                                    </a>
+                                </li>
+                            </ul>
                         </section>
 
                     </aside>
