--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -22,7 +22,7 @@
 
     {# Macros #}
 
-    {% import "post-macros.html" as post_macros with context %}
+    {% import "post-macros.html" as post_macros %}
 
     <main class="content content__1-3" id="main" role="main">
 
@@ -163,36 +163,24 @@
                             </div>
                         </div>
 
-                        <section class="content_block content_block__padded-top content_block__border-top content_block__flush-bottom">
-                            <h1 class="content_title__large">
-                                CFPB leadership
+                        <section class="content_block content_block__flush-bottom">
+                            <h1 class="header-slug">
+                                <span class="header-slug_inner">
+                                    Related links
+                                </span>
                             </h1>
-                            <div class="content-l">
-                                <div class="content-l_col content-l_col-1-2">
-                                    <p class="u-mb0 short-desc">
-                                        In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB. In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director  of the CFPB.
-                                    </p>
-                                </div>
-                                <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                    <ul class="u-mb0 list list__unstyled list__links">
-                                        <li class="list_item">
-                                            <a href="{{ path + 'about-steve-antonakes/' }}" class="list_link jump-link">
-                                                Learn more about deputy director Steven Antonkes
-                                            </a>
-                                        </li>
-                                        <li class="list_item">
-                                            <a href="{{ path + 'leadership-calendar/' }}" class="list_link jump-link">
-                                                View our leadership calendar
-                                            </a>
-                                        </li>
-                                        <li class="list_item">
-                                            <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
-                                                Bureau organizational structure
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <ul class="list list__unstyled list__links">
+                                <li class="list_item">
+                                    <a href="{{ path + 'about-steve-antonakes/' }}" class="list_link jump-link">
+                                        Learn about Deputy Director Steven Antonkes
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
+                                        Bureau organizational structure
+                                    </a>
+                                </li>
+                            </ul>
                         </section>
 
                     </aside>
