--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -83,7 +83,7 @@
                             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                                 <h1 class="h4">Request speaking info</h1>
                                 <span class="cf-icon cf-icon-email"></span>
-                                <a href="mailto:externalaffairs@cfpb.gov">
+                                <a class="styled-link" href="mailto:externalaffairs@cfpb.gov">
                                     externalaffairs@cfpb.gov
                                 </a>
                             </div>
