--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -131,7 +131,7 @@
                         </section>
 
                         <div class="content_block content_block__padded-top content_block__border-top">
-                            <div class="content-l">
+                            <div class="content-l content-l__large-gutters">
                                 <section class="content-l_col content-l_col-1-2">
                                     <h1 class="content_title__large">
                                         Cordray’s Corner
