Updates the media margin.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -70,7 +70,7 @@
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
-                                    <div class="media_image-container">
+                                    <div class="media_image-container media_image-container__wide-margin">
                                         <img src="cordray_round_90.jpg" alt="" width="60">
                                     </div>
                                     <div class="media_body">
