Adds video-poster to cordray page.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -137,7 +137,9 @@
                                         Cordray’s Corner
                                     </h1>
                                     <figure class="figure__bordered">
-                                        <img src="cordrays_corner.jpg" alt="">
+                                        <a class="video-poster" href="#">
+                                            <img src="cordrays_corner.jpg" alt="">
+                                        </a>
                                     </figure>
                                     <p class="short-desc short-desc__large">
                                         View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
